increase min-height of testimonials section to fix layout shift

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -93,7 +93,7 @@ figcaption {
 }
 
 .testimonials-section {
-  min-height: 700px;
+  min-height: 750px;
 }
 
 .testimonial {
